colocando login e registro
