# src/docs/swagger.json
@@ -52,6 +52,67 @@
         }
       }
     },
+  "/auth/register": {
+    "post": {
+      "summary": "Registra um novo usuário",
+      "tags": ["Autenticação"],
+      "requestBody": {
+        "required": true,
+        "content": {
+          "application/json": {
+            "schema": {
+              "$ref": "#/components/schemas/Usuario"
+            }
+          }
+        }
+      },
+      "responses": {
+        "201": {
+          "description": "Usuário criado com sucesso"
+        },
+        "400": {
+          "description": "Usuário já existe"
+        },
+        "500": {
+          "description": "Erro interno no servidor"
+        }
+      }
+    }
+  },
+  "/auth/login": {
+    "post": {
+      "summary": "Faz login do usuário e retorna um token JWT",
+      "tags": ["Autenticação"],
+      "requestBody": {
+        "required": true,
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": { "type": "string", "format": "email" },
+                "senha": { "type": "string" }
+              },
+              "required": ["email", "senha"]
+            }
+          }
+        }
+      },
+      "responses": {
+        "200": {
+          "description": "Login realizado com sucesso (token JWT retornado)"
+        },
+        "401": {
+          "description": "Credenciais inválidas"
+        },
+        "500": {
+          "description": "Erro interno no servidor"
+        }
+      }
+    }
+  }
+},
+
     "/usuarios/{id}": {
       "get": {
         "summary": "Busca usuário por ID",
@@ -472,7 +533,9 @@
         },
         "required": ["nome", "cnpj", "email"]
       }
+      
     }
   }
 }
+
 
